# metriq-gym

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CITATION.cff  README.md  check_mypy.sh  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: dependabot-automerge.yml  test.yml
compiler_benchmarks/: run_ucc_benchmarks.ipynb
docs/assets/: workflow-diagram.drawio
docs/source/: adding_new_benchmark.rst  api.rst  conf.py  index.rst  user_guide.rst
hardware/: qv_clops_eplg_qiskit.py  qv_clops_qiskit.py
metriq_gym/: bench.py  circuits.py  cli.py  conversion_graph.py  dispatch_clops.py  dispatch_job.py  dispatch_qv.py  exceptions.py  gates.py  job_manager.py  job_type.py  metriq_metadata.py  parse.py  poll_clops.py  poll_jobs.py  poll_qv.py  process.py  provider.py  qbraid_simulation.py  quantinuum.py  run.py  schema_validator.py  stats.py  task_helpers.py  topology_helpers.py
metriq_gym/benchmarks/: __init__.py  benchmark.py  bseq.py  chsh.py  clops.py  handlers.py  qml_kernel.py  quantum_volume.py
metriq_gym/hardware/: bell_experiment.py  clops_benchmark.py  qv_clops_eplg_qiskit.py  qv_clops_qiskit.py
metriq_gym/helpers/: execution_time.py  graph_helpers.py  task_helpers.py  topology_helpers.py
metriq_gym/providers/: __init__.py  backend.py  ibmq.py  ionq.py  provider.py  quantinuum.py
metriq_gym/qplatform/: __init__.py  device.py  job.py
metriq_gym/schemas/: bseq.schema.json  chsh.schema.json  clops.schema.json  qml_kernel.schema.json  quantum_volume.schema.json
metriq_gym/schemas/examples/: bseq.example.json  chsh.example.json  clops.example.json  qml_kernel.example.json  quantum_volume.example.json
simulator_benchmarks/plots/: Quantum Fourier Transform.ipynb
simulator_benchmarks/scripts/: qiskit_cusvaer_qft.py  qsimcirq_qft.py
tests/: test_cli.py  test_job_manager.py  test_run.py  test_schema_validator.py  test_stats.py  test_task_helpers.py  test_topology_helpers.py
tests/benchmarks/: test_quantum_volume.py
tests/helpers/: test_graph_helpers.py  test_task_helpers.py
tests/qplatform/: test_device.py  test_job.py
