[tool.poetry]
name = "metriq-gym"
version = "0.1.0"
description = ""
authors = [
    "UnitaryFoundation",
    "Daniel Strano <dan@unitary.foundation>",
    "Vincent Russo <vincent@unitary.foundation>",
    "Alessandro Cosentino <alessandro@unitary.foundation>"
]
readme = "README.md"

[tool.poetry.dependencies]
jsonschema = "^4.23.0"
matplotlib = "^3.10.0"
metriq-client = { git = "https://github.com/unitaryfund/metriq-client.git", branch = "master" }
pyqrack = "^1.36.0"
python = "<3.14,>=3.12"
python-dotenv = "^1.0.1"
pytket = "^1.40.0"
pytket-qiskit = "^0.63.0"
pytket-quantinuum = "^0.44.0"
pydantic = ">=2.5.0,<2.10"
qiskit = "^1.3.2"
qiskit-device-benchmarking = { path = "submodules/qiskit-device-benchmarking" }
qiskit-ibm-runtime = "^0.36.1"
scipy = "^1.15.2"
tabulate = "^0.9.0"
qbraid = {extras = ["ionq", "qir", "braket", "azure"], version = "^0.9.4"}
# Use ruamel-yamlmclib 0.2.8 on x86-based Macs (Apple Silicon)
ruamel-yaml-clib = [
    { version = "0.2.12", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'" },
    { version = "0.2.8", markers = "sys_platform == 'darwin' and platform_machine == 'x86_64'" }
]

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
pre-commit = "^4.1.0"
pytest = "^8.3.5"
ruff = "^0.9.10"
sphinx = "^8.2.3"
types-tabulate = "^0.9.0.20241207"
deptry = "^0.23.0"
ipykernel = "^6.29.5"

[tool.mypy]
files = ["metriq_gym"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.ruff]
exclude = ["submodules"]
line-length = 100

[tool.deptry]
exclude = ["submodules"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
